turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:67: error: not enough arguments for method init: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
		init();
                    ^